[package]
name = "sleeper_service"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "sleeper_service"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
tray-icon = "0.22"
muda = "0.17"
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
] }
